oldMeta/NewTs/unpackaged/Telangana/objects/Register__c.object
<CustomObject>
    <description>It is used to take the records for verification and it will post in the website after granting by officals</description>
    <fields>
        <fullName>Adhaar_Number__c</fullName>
        <description>it is useful for pahani</description>
        <inlineHelpText>enter ur adhaar number</inlineHelpText>
        <label>Adhaar Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Of_Land_In_Acres__c</fullName>
        <label>Area Of Land(In Acres)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop_Season__c</fullName>
        <label>Crop Season</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kharif</fullName>
                </value>
                <value>
                    <fullName>Rabi</fullName>
                </value>
                <value>
                    <fullName>Kharif &amp; Rabi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cultivation_Crops__c</fullName>
        <label>Cultivation Crops</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Soyabean</fullName>
                </value>
                <value>
                    <fullName>Sugarcane</fullName>
                </value>
                <value>
                    <fullName>Turmeric</fullName>
                </value>
                <value>
                    <fullName>Paddy (Rice)</fullName>
                </value>
                <value>
                    <fullName>Maize</fullName>
                </value>
                <value>
                    <fullName>Moong (Pulses)</fullName>
                </value>
                <value>
                    <fullName>Groundnut</fullName>
                </value>
                <value>
                    <fullName>Red Chillies</fullName>
                </value>
                <value>
                    <fullName>Wheat</fullName>
                </value>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Mustard</fullName>
                </value>
                <value>
                    <fullName>Sesame</fullName>
                </value>
                <value>
                    <fullName>Peas</fullName>
                </value>
                <value>
                    <fullName>Muskmelon</fullName>
                </value>
                <value>
                    <fullName>Watermelon</fullName>
                </value>
                <value>
                    <fullName>Vegetables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>District</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <description>it is helpful for pahani</description>
        <inlineHelpText>enter ur father name</inlineHelpText>
        <label>Father Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Source__c</fullName>
        <label>Land Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BoreWell</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Tax__c</fullName>
        <label>Land Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mandal__c</fullName>
        <label>Mandal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>District__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Mandal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passbook_Number__c</fullName>
        <description>it is useful for pahani</description>
        <inlineHelpText>enter the land passbook number</inlineHelpText>
        <label>Passbook Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>text(IF( (isblank( Father_Name__c )),0 , 1)+
IF( (isblank(  Email__c )),0 , 1)+
IF( (isblank(  Area_Of_Land_In_Acres__c )),0 , 1)+
IF( (isblank(   Land_Tax__c )),0 , 1)+
IF( (isblank(  Cultivation_Crops__c )),0 , 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Register_ID__c</fullName>
        <description>this id is useful for pahani</description>
        <displayFormat>RD-{00}</displayFormat>
        <inlineHelpText>it generates automatic number</inlineHelpText>
        <label>Register ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Under Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_No__c</fullName>
        <description>it is for survey  record number</description>
        <inlineHelpText>enter the survey no of ur land</inlineHelpText>
        <label>Survey No</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIllage__c</fullName>
        <label>VIllage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mandal__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Village</valueSetName>
        </valueSet>
    </fields>
    <label>Register</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Register Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Register</pluralLabel>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <label>Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>OtherUSer</fullName>
        <active>true</active>
        <label>OtherUSer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Adhar_Number</fullName>
        <active>true</active>
        <errorConditionFormula>or(not isnumber(  Adhaar_Number__c  ),LEN( Adhaar_Number__c )&lt;12)</errorConditionFormula>
        <errorDisplayField>Adhaar_Number__c</errorDisplayField>
        <errorMessage>Enter the ADHAAR interms of 12 digit Number only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Passbook_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>or(not isnumber ( Passbook_Number__c ),len(Passbook_Number__c )&lt;=4)</errorConditionFormula>
        <errorDisplayField>Passbook_Number__c</errorDisplayField>
        <errorMessage>Passbook Number Should be of five digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>or(not isnumber( Phone_Number__c ),        LEN(Phone_Number__c)&gt;10,len( Phone_Number__c)&lt;10)</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>Enter Phone Number Of ten Digits Only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Suvey_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>or(not isnumber (Survey_No__c),len(Survey_No__c)&gt;3)</errorConditionFormula>
        <errorDisplayField>Survey_No__c</errorDisplayField>
        <errorMessage>Enter the survey in Number format of two digits only</errorMessage>
    </validationRules>
</CustomObject>